--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <title>タイトル</title>
+    <title>パンプアップ</title>
   </head>  
   <body>
-    テスト
+    筋繊維
   </body>
 </html>
